<resources>
    <string name="app_name">CYOTI</string>

    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_friends">Friends</string>
	<string name="action_logout">Logout</string>

    <string name="title_creation_user">Create account</string>

    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="title_fragment_propose_challenge">Challenge your friends</string>
    <string name="title_activity_user_profile">Your profile</string>
    <string name="title_activity_user_history">Your history</string>
    <string name="title_activity_pending_challenges">Your pending challenges</string>
    <string name="title_activity_description_challenge">Description of a challenge</string>
    <string name="welcome">Welcome</string>

    <!-- Connexion Facebook-->
    <string name="facebook_app_id">832011486891392</string>
    <!-- MainActivityFragment -->
    <string name="tv_cioty">CYOTI PROJECT!</string>
    <string name="tv_challenge">Challenge your friends!</string>
    <string name="tv_signin">Sign in with social network</string>

    <!-- ProposeChallengeFragment -->
    <string name="tv_write_challenge">Write a challenge</string>
    <string name="et_write_challenge">Type something</string>
    <string name="tv_choose_theme">Choose a theme</string>
    <string name="tv_who">Who ?</string>
    <string name="bt_send_challenge">Send this challenge</string>

    <!-- VoteChallengeFragment -->
    <string name="tv_descriptionChallenge">Impossible to load challenge\'s description</string>
    <string name="bt_validChallenge">Accept victory</string>
    <string name="bt_proposeChallenge">Propose this challenge</string>
    <string name="dialog_message">list of friend here</string>
    <string name="dialog_title">Choose a friend</string>
    <string name="yes_propose">Your proposition to your friend has been sent</string>
    <string name="no_propose">Your proposition hasn\'t been sent</string>
    <string name="pb_propose">Problem sending proposition. Please try later</string>

    <!-- FriendsFragment -->
    <string name="tv_addFriend">Add a friend ?</string>
    <string name="actv_addFriend">Pseudo of your friend</string>
    <string name="ib_addFriend_description">Validation of adding a friend</string>
    <string name="bt_remove_text">Remove Friends</string>

    <!-- DescriptionChallengeActivity -->
    <string name="tv_title_description">Challenge\'s description :</string>
    <string name="tv_title_proof">Proof of winning :</string>
    <string name="tv_no_proof">There is no proof for this challenge (yet ?)</string>
    <string name="tv_proof_description">Picture of the proof</string>
    <string name="bt_select_file">Upload file</string>
    <string name="bt_take_picture">Take a picture</string>

    <!-- PendingChallengesActivity -->

    <!-- UserProfileActivity -->
    <string name="tv_userAccount">Account</string>
    <string name="tv_userName">User</string>
    <string name="tv_userEmail">Email</string>
    <string name="tv_userPassword">Password</string>
    <string name="tv_userPreferences">Preferences</string>
    <string name="tv_notifications">Notifications</string>
    <string name="tv_mailNotification">Mailing</string>
    <string name="tv_saveChanges">Do you want to save your changes ?</string>
    <string name="tv_deleteProfile">Would you delete your profile ?</string>

    <string-array name="challenge_themes">
        <item>Choose a theme for your challenge</item>
        <item>Dance</item>
        <item>Sing</item>
        <item>Sport</item>
        <item>Humour</item>
        <item>Serious</item>
    </string-array>
</resources>
