<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@mipmap/background_challenge"
    tools:context="com.example.quentin.cyoti.ProposeChallengeFragment">

    <TextView android:text="@string/tv_write_challenge" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_writeChallenge"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_challenge"
        android:layout_below="@+id/tv_writeChallenge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/et_write_challenge"/>

    <TextView android:id="@+id/tv_chooseTheme"
        android:text="@string/tv_choose_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_challenge"
        android:layout_marginTop="35px"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/sp_challenge_themes"
        android:layout_below="@+id/tv_chooseTheme"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#fff8f9ff"/>

</RelativeLayout>
