<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/dark_beige"
    tools:context="com.example.quentin.cyoti.UserFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_description"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_description"
                android:textSize="10sp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tv_title_proof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:text="@string/tv_title_proof"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/im_proof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_title_proof"
                android:contentDescription="@string/tv_proof_description"/>

            <TextView
                android:id="@+id/tv_no_proof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_title_proof"
                android:text="@string/tv_no_proof"
                android:textSize="10sp"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/im_proof"
                android:gravity="center"
                android:id="@+id/ll_buttons_like">

                <ImageButton
                    android:id="@+id/ib_unlike"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@mipmap/unlike"
                    android:visibility="invisible"
                    android:clickable="false"/>

                <ImageButton
                    android:id="@+id/ib_like"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@mipmap/like"
                    android:visibility="invisible"
                    android:clickable="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/tv_no_proof"
                android:gravity="center"
                android:id="@+id/ll_buttons_picture">

                <Button
                    android:id="@+id/bt_select_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/bt_select_file"
                    android:visibility="invisible"
                    android:clickable="false"/>

                <Button
                    android:id="@+id/bt_take_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/bt_take_picture"
                    android:visibility="invisible"
                    android:clickable="false"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_vote"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:useLevel="true"
                android:layout_below="@+id/ll_buttons_like"
                android:layout_marginTop="25dp"
                android:layout_alignRight="@+id/ll_buttons_like"
                android:layout_alignEnd="@+id/ll_buttons_like"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <ImageButton
                android:id="@+id/bt_unlike"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/pb_vote"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:background="@mipmap/unlike" />

            <ImageButton
                android:id="@+id/bt_like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/bt_unlike"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:background="@mipmap/like" />

            <Button
                android:id="@+id/bt_proposeChallenge"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/bluemerica3"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/bt_like"
                android:layout_marginTop="10dp"
                android:text="@string/bt_proposeChallenge"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50dp"
                android:textStyle="bold"
                android:textColor="#ff009900"
                android:id="@+id/tv_percent"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/pb_vote"
                android:layout_marginTop="120dp"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

