<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#fe7b7b7b"
    tools:context="com.example.quentin.cyoti.UserProfileActivity">

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:src="@drawable/f_avatar"/>

    <ImageButton
        android:id="@+id/bt_editPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageUser"
        android:layout_alignBottom="@id/imageUser"
        android:background="#fe7b7b7b"
        android:src="@drawable/ic_edit"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/userIdentity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/imageUser"
        android:layout_marginTop="70px"
        android:background="#ffffff">

        <TextView
            android:id="@+id/tv_userAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_userAccount"
            android:background="#ffc70618"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="15pt"
            android:paddingTop="5px"
            android:paddingLeft="30px" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:layout_below="@id/tv_userAccount"
            android:layout_alignLeft="@id/tv_userAccount"
            android:layout_marginLeft="45px"
            android:textColor="#fe7b7b7b"
            android:text="@string/tv_userName"
            android:textSize="10pt"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_userName"
            android:layout_alignTop="@id/tv_userName"
            android:layout_marginLeft="100px"
            android:textColor="#fe7b7b7b" />


        <TextView
            android:id="@+id/tv_userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_userName"
            android:layout_alignLeft="@id/tv_userAccount"
            android:layout_marginLeft="45px"
            android:layout_marginTop="50px"
            android:textColor="#fe7b7b7b"
            android:text="@string/tv_userEmail"
            android:textSize="10pt"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_userEmail"
            android:layout_alignTop="@id/tv_userEmail"
            android:layout_alignLeft="@id/et_userName"
            android:textColor="#fe7b7b7b" />

    </RelativeLayout>



</RelativeLayout>
