<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/dark_beige"
    tools:context="com.example.quentin.cyoti.VoteChallengeFragment">


    <ImageView
        android:id="@+id/imageFriend"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/ic_app" />

    <TextView
        android:id="@+id/tv_descriptionChallenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_descriptionChallenge"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/imageFriend"
        android:layout_toRightOf="@+id/imageFriend"
        android:layout_toEndOf="@+id/imageFriend" />

    <ProgressBar
        android:id="@+id/pb_vote"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:useLevel="true"
        android:layout_below="@+id/tv_descriptionChallenge"
        android:layout_marginTop="25dp"
        android:layout_alignRight="@+id/tv_descriptionChallenge"
        android:layout_alignEnd="@+id/tv_descriptionChallenge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <ImageButton
        android:id="@+id/bt_unlike"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/pb_vote"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/unlike" />

    <ImageButton
        android:id="@+id/bt_like"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/bt_unlike"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:background="@mipmap/like" />

    <Button
        android:id="@+id/bt_validChallenge"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/bar_blue"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_like"
        android:layout_marginTop="100px"
        android:text="@string/bt_validChallenge"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bt_proposeChallenge"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/bluemerica3"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_validChallenge"
        android:layout_marginTop="10dp"
        android:text="@string/bt_proposeChallenge"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="#ff009900"
        android:id="@+id/tv_percent"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/pb_vote"
        android:layout_marginTop="120dp"/>
</RelativeLayout>
