<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/purple"
    tools:context=".MainActivityFragment">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trophy"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_margin="16dp"
        android:id="@+id/linearLayout_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_cyoty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="@string/tv_cioty"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_challenge"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/tv_challenge"
            android:gravity="center" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/tv_signin"
        android:layout_below="@+id/linearLayout_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- Alignement des boutons des réseaux sociaux pour la connexion -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/linearLayout_socialnetwork"
        android:layout_below="@id/tv_signin">

        <RelativeLayout
            android:layout_width="75dp"
            android:layout_height="75dp">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_fb"
                android:layout_marginBottom="30dp" />
        </RelativeLayout>

        <RelativeLayout android:layout_width="75dp"
            android:layout_height="75dp">
            <ImageButton
                android:id="@+id/twitter"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/ic_twitter"
                android:layout_margin="10dp"
                />
        </RelativeLayout>
        <RelativeLayout android:layout_width="75dp"
            android:layout_height="75dp">
            <ImageButton
                android:id="@+id/google"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/ic_google"
                android:layout_margin="10dp"
                />
        </RelativeLayout>
    </LinearLayout>

    <!-- fin alignement bouton réseaux sociaux -->


    <TextView
        android:id="@+id/tv_or"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="OR"
        android:textSize="30sp"
        android:layout_below="@+id/linearLayout_socialnetwork"/>

    <!-- Alignement des textview pour la connexion -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_connection"
        android:layout_below="@id/tv_or"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/txtusername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Username"
            android:gravity="center"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/txtpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>
    <!-- fin de l'alignement des textview pour la connexion -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout_connection"
        android:gravity="center">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="SIGN IN"
            android:background="@color/turquoise"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/turquoise"
            android:text="Create an account"
            android:layout_margin="5dp"/>
    </LinearLayout>
</RelativeLayout>
